--- a/.github/workflows/deploy_limas-api-dev.yml
+++ b/.github/workflows/deploy_limas-api-dev.yml
@@ -4,11 +4,11 @@
 name: Deploy API to Azure Web App (Dev) - limas-api-dev
 
 on:
+  workflow_dispatch:
   workflow_run:
-    workflows: ["SonarCloud"]
+    workflows: [SonarCloud]
     types:
         - completed
-  workflow_dispatch:
 
 jobs:
   build:
