feat: Update code-scanning_limas-api-dev.yml

--- a/.github/workflows/code-scanning_limas-api-dev.yml
+++ b/.github/workflows/code-scanning_limas-api-dev.yml
@@ -45,6 +45,6 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"limasakeh_Weather-Example-API-Dev" /o:"limas-personalorganization" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet build --configuration Release
+          dotnet build --no-incremental
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
 
